[package]
name = "ar-drivers"
description = "Opensource driver for Rokid Air and Mad Gaze Glow AR glasses"
version = "0.2.1"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/ar-drivers-rs"
documentation = "https://docs.rs/ar-drivers"
keywords = ["rokid", "ar"]
categories = ["hardware-support"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
rusb = "0.9.1"
serialport = "4.2"

[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
