[package]
name = "ar-drivers"
description = "Opensource driver for some Rokid, Nreal and Mad Gaze AR glasses"
version = "0.2.1"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/ar-drivers-rs"
documentation = "https://docs.rs/ar-drivers"
keywords = ["rokid", "ar"]
categories = ["hardware-support"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mad_gaze", "rokid", "nreal"]
rokid = ["rusb"]
nreal = ["hidapi", "tinyjson"]
mad_gaze = ["serialport"]

[dependencies]
byteorder = "1.4"
hidapi = { version = "2.2.2", optional = true }
rusb = { version = "0.9.1", optional = true }
serialport = { version = "4.2", optional = true }
tinyjson = { version = "2.5.1", optional = true }

[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
